# span

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.node.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: credentials.rs  inventory.rs  mod.rs  ssh.rs
src-tauri/src/credentials/: mod.rs  vault.rs
src-tauri/src/inventory/: db.rs  import.rs  mod.rs  models.rs
src-tauri/src/scripting/: engine.rs  mod.rs
src-tauri/src/ssh/: connection.rs  manager.rs  mod.rs  proxy.rs
src/lib/components/: QuickConnect.svelte  Sidebar.svelte  StatusBar.svelte  TabBar.svelte  Terminal.svelte  TitleBar.svelte
src/lib/stores/: inventory.svelte.ts  inventory.ts  sessions.svelte.ts  sessions.ts  ui.ts
src/lib/types/: index.ts
