[package]
name = "span"
version = "0.1.0"
description = "SSH Terminal for Network Engineers"
authors = ["Span Contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# SSH
russh = "0.46"
russh-keys = "0.46"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Lua scripting
mlua = { version = "0.10", features = ["luajit", "async", "serialize"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Credential storage
keyring = "3"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
